tests/functional/lang/eval-fail/overflowing-mul.err.exp
error:
       … while calling the 'mul' builtin
         at /pwd/lang/eval-fail/overflowing-mul.nix:4:7:
            3| in
            4| a * a * a
             |       ^
            5|

       … while calling the 'mul' builtin
         at /pwd/lang/eval-fail/overflowing-mul.nix:4:3:
            3| in
            4| a * a * a
             |   ^
            5|

       error: integer overflow in multiplying 4294967297 * 4294967297
